# tellme

./: .gitignore  Makefile.am  README.md  configure.ac  tellme-default.conf  tellme.example.conf  tellme.man  tellme.py
